# grad-eclip-adversarial-attack

./: .env.template  .gitignore  CLAUDE.md  experiment_all_heads_attack.py  experiment_head_attack.py  install_requirements.sh  job_main_test.sh  main_test.py  multihead_explain.py  pyproject.toml  requirements.txt  slurm_run.sh  test.ipynb
DatasetUtils/: README.md  download_COCO.py  download_quickdraw.py  prepare_dataset.py  upload_set.py
data/: prepare_dataset.py
examples/: Untitled  train_clip.sh  train_cnn.sh
experiments/: analyze_pcc_vs_clean.py  check_jpeg_degradation.py  experiment_all_heads_attack.py  experiment_head_attack.py  experiment_single_head_attack_dataset.py  multihead_explain.py  viz_pcc_heatmaps.py
models/: __init__.py  clip_facebook_metaclip2_b16.py  clip_google_siglip2_b32_256.py  clip_model.py  clip_openai_vit_b16.py  clip_openai_vit_b32.py  clip_openai_vit_l14.py
training/: README.md  __init__.py  data.py  metrics.py  models.py  preprocess.py  smoke.py  train.py
