[project]
name = "grad-eclip-adversarial-attack"
version = "0.1.0"
description = "Adversarial attacks on Grad-ECLIP explanations for CLIP models"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.7.0",
    "numpy>=2.0",
    "pillow>=10.0",
    "opencv-python>=4.0",
    "matplotlib>=3.0",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
    "pyyaml>=6.0",
    "huggingface-hub>=1.0",
    "safetensors>=0.4",
    "rich>=13.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
